-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.8.x
-
None
-
X11
-
363c9aba772b20d2df9070be730ffb36775b6f2b
Using a Qt 4.8.x in X11 (fixed in Qt 5.x) with a mouse with more than 3 buttons, ie XButton1 and XButton2, the application emits the mouse press event, but never emits a mouse release.
This is issue depending on the internal X11 architecture that has a special mask to track "normal" mouse events `Button1|2|3Mask` but there is no Button4Mask to detect the XButtons release.
A suggested fix that matches the actual code structure in Qt4.8 is to add another state variable similar to the one that manages the double clicks to track the XButton press and release.
A proposed patch can be found here: https://codereview.qt-project.org/#/c/81373
| For Gerrit Dashboard: QTBUG-40148 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 81373,10 | Identify XButton1|2 release events when mouse is moving. | 4.8 | qt/qt | Status: MERGED | +2 | 0 |