Identify XButton1|2 release events when mouse is moving.

X11 has no special state for XButton1 and XButton2, so we need
to look at the global `mouseButtonState` and restore the buttons
after a mouse move.

Task-number: QTBUG-40148
Change-Id: I789f32b344cf7902b1c7aa6b7da7f20f32602be2
Reviewed-by: Alexander Volkov <a.volkov@rusbitech.ru>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>